# claude-architect-viewer

./: CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
assets/: style.css
src/: chat.rs  main.rs  message.rs  sidebar.rs  state.rs  watcher.rs
