[package]
name = "claude-architect-viewer"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
